# tamara

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .slingshot.yaml  CMakeLists.txt  CODESTYLE.md  Doxyfile  README.md  requirements.txt
include/tamara/: fix_walker.hpp  logic_graph.hpp  termcolour.hpp  util.hpp  voter_builder.hpp
papers/poster/: gradient.typ  poster.odp  poster.typ
papers/proposal/: Justfile  gantt.mmdc  proposal.bib  proposal.typ  tamara_synthesis_flow.drawio  tmr_diagram.drawio
papers/proposal_draft/: Justfile  proposal.bib  proposal_draft.typ  tamara_synthesis_flow.drawio
papers/slides/: emesent_presentation.typ  progress_seminar.typ  sandia_presentation.typ  slides.bib
papers/slides/diagrams/: algorithm.drawio  tmr_diagram.drawio
papers/thesis/: acronyms.yaml  config.yaml  thesis.bib  uqthesis.typ
papers/thesis/diagrams/schematics/: cones.dot  cones_2bit.dot  cones_min.dot  crc_const_variant3.dot  crc_const_variant4.dot  crc_const_variant5.dot  fix_walker_after.dot  fix_walker_before.dot  mux_1bit.dot  mux_2bit.dot  mux_32bit.dot  not_slice.dot  not_swizzle_high.dot  not_swizzle_low.dot  recurrent_dff.dot
papers/thesis/diagrams_src/: classdiagram.drawio  logic_cone.drawio  rtlil_set.drawio  search_continuation.drawio  synthesis_flow.drawio  verification.drawio
papers/thesis/pages/: abstract.typ  acknowledgements.typ  contents.typ  dedication.typ  title.typ
papers/thesis/pages/appendices/: example.typ  source_code.typ
papers/thesis/pages/chapters/: conclusion.typ  intro.typ  lit_review.typ  method.typ  results.typ
papers/thesis/results/: fault_err_protected_not_tmr.json  fault_err_unprotected_mux_1bit.json  fault_err_unprotected_mux_2bit.json  fault_err_unprotected_not_2bit.json  fault_err_unprotected_not_32bit.json  fault_err_unprotected_not_tmr.json  fault_protected_crc_const_variant3.json  fault_protected_crc_const_variant4.json  fault_protected_crc_const_variant5.json  fault_protected_inverter.json  fault_protected_mux_16bit.json  fault_protected_mux_1bit.json  fault_protected_mux_1bit_multi.json  fault_protected_mux_24bit.json  fault_protected_mux_2bit.json  fault_protected_mux_32bit.json  fault_protected_mux_4bit.json  fault_protected_mux_8bit.json  fault_protected_not_2bit.json  fault_protected_not_32bit.json  fault_protected_not_dff_tmr.json  fault_protected_not_slice.json  fault_protected_not_swizzle_high.json  fault_protected_not_swizzle_low.json  fault_protected_not_tmr.json  fault_unmitigated_crc_const_variant3.json  fault_unmitigated_crc_const_variant4.json  fault_unmitigated_crc_const_variant5.json  fault_unmitigated_mux_16bit.json  fault_unmitigated_mux_1bit.json  fault_unmitigated_mux_24bit.json  fault_unmitigated_mux_2bit.json  fault_unmitigated_mux_32bit.json  fault_unmitigated_mux_4bit.json  fault_unmitigated_mux_8bit.json  fault_unmitigated_not_2bit.json  fault_unmitigated_not_32bit.json  fault_unmitigated_not_dff_tmr.json  fault_unmitigated_not_slice.json  fault_unmitigated_not_swizzle_high.json  (+21 more)
papers/thesis/util/: macros.typ
src/: fix_walker.cpp  logic_graph.cpp  tamara_debug.cpp  tamara_finalise_pass.cpp  tamara_propagate_pass.cpp  tamara_tmr_pass.cpp  util.cpp  voter.v  voter_builder.cpp
tests/: counter.sv  crc8.v  gen_test.py  regress.py  regress.yaml  requirements.txt  run.sh  shiftreg.sv  voter.sv
tests/cxxrtl/: not_dff_tmr_cxxrtl.cpp
tests/debugging/: debug_utils.hpp  not_dff_tmr_tb.v  not_dff_tmr_verilator.cpp  run.sh
tests/formal/equivalence/: bug7.eqy  crc16.eqy  crc2.eqy  crc4.eqy  crc6.eqy  crc7.eqy  crc8.eqy  crc_const_variant3.eqy  crc_const_variant4.eqy  crc_const_variant5.eqy  crc_min.eqy  mux_1bit.eqy  mux_1bit_multi_tmr.eqy  mux_2bit.eqy  mux_32bit.eqy  not_2bit.eqy  not_32bit.eqy  not_dff.eqy  not_dff_compare_manual.eqy  not_dff_e2e.eqy  not_dff_manual_tmr.eqy  not_dff_sat.ys  not_slice.eqy  not_swizzle_high.eqy  not_swizzle_low.eqy  not_tmr.eqy  not_tmr_sat.ys  not_voter.eqy  not_voter_manual.eqy  voter.eqy
tests/formal/err/: not_tmr_err.ys
tests/formal/fault/: nfaults.ys.tmpl  nfaults_err_protected.ys.tmpl  nfaults_err_unprotected.ys.tmpl  nfaults_protected.ys.tmpl  nfaults_unmitigated.ys.tmpl  nfaults_unprotected.ys.tmpl  not_2bit.eqy  not_2bit.ys  not_2bit_multifault.ys  not_2bit_unprotected.ys  not_dff_tmr.ys  not_tmr.eqy  not_tmr.ys
tests/formal/fault/eqy/: nfaults_protected.eqy.tmpl  nfaults_unprotected.eqy.tmpl  (+1 more)
tests/fuzz/: tiny.toml  verismith.sh
tests/junk/: voter.rtlil
tests/manual_tests/: debugging_not_dff_tmr.circ  extract_bit.sv  not_gate_triplicate.circ  simple_notmr.circ  simple_tmr.circ  table_2bit.txt  test_not_dff_tmr.circ  truthtable.csv  truthtable.txt  truthtable_2bit.txt  truthtable_4bit.txt  voter_error_OR.v
tests/scripts/: browndeer_rv8u.ys  bug31.ys  bug39.ys  bug7.ys  cones.ys  cones_2bit.ys  cones_min.ys  count_lead_zero.ys  counter.ys  crc16.ys  crc2.ys  crc4.ys  crc6.ys  crc7.ys  crc8.ys  crc_const_variant3.ys  crc_const_variant4.ys  crc_const_variant5.ys  crc_min.ys  dff_tmr.ys  divider.ys  gen_2bit_voter.ys  gen_4bit_voter.ys  gen_voter.ys  memory.ys  memory_simple.ys  minimax.ys  mux_1bit.ys  mux_2bit.ys  mux_32bit.ys  not_2bit.ys  not_2bit_fault_injection.ys  not_32bit.ys  not_dff_tmr.ys  not_dff_tmr_2bit.ys  not_slice.ys  not_swizzle_high.ys  not_swizzle_low.ys  not_tmr.ys  not_triplicate.ys  (+9 more)
tests/unit/: plugin_tests.py
tests/verilog/: browndeer_rv8u.v  bug31.v  bug39.v  bug7_reduced.v  cones.sv  counter.sv  crc.v  crc2.v  crc8.v  crc_min.sv  crc_min.v  dff_tmr.sv  divider.sv  femtorv32_quark.v  memory.sv  minimax.v  mux.sv  not_2bit.sv  not_32bit.sv  not_dff_manual_tmr.sv  not_dff_tmr.sv  not_dff_tmr_2bit.sv  not_slices.sv  not_tmr.sv  not_triplicate.sv  not_voter_eqy.sv  passthru_tmr.sv  picorv32.v  picorv32.ys  recurrent_dff.sv  shiftreg.sv  top.sv  voter.sv
tools/: 0001-Add-YS_IGNORE_SHOW-to-show.cc.patch  0002-Propagate-exceptions-in-passes.patch  all_debug.fish  ecp5_shotgun.cpp  fault_injection_sweep.py  generate_bar_graph.py  generate_help.py  generate_typst_result_table.py  multi_graph.py  no_debug.fish  voter_table.py
(+3 files in other folders)
